# talk2-me

./: .env.example  README.md  pyproject.toml
src/talk2-me/: main.py  utils.py  workflow.py
src/talk2-me/configs/: app_config.py
src/talk2-me/configs/service/: deepgram.py  livekit.py  openai.py
src/talk2-me/model_providers/openai/: openai.py
src/talk2-me/model_providers/openai/llm/: llm.py
src/talk2-me/model_providers/openai/speech2text/: speech2text.py
src/talk2-me/model_providers/openai/tts/: tts.py
src/talk2-me/providers/livekit/plugins/silero/: README.md  vad.py
src/talk2-me/providers/openai/: openai.py
