[project]
name = "talk2-me"
version = "0.1.0"
description = ""
authors = [{ name = "natserract", email = "benjaminstwo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<3.13"

dependencies = [
    "livekit==0.11.1",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "livekit-agents==0.7.2",
    "livekit-plugins-deepgram==0.5.1",
    "livekit-plugins-openai==0.6.0",
    "torch==2.2.2",
    "livekit-plugins-silero==0.2.0",
    "torchaudio==2.2.2",
]

[tool.rye.scripts]
talk2-me = "python src/talk2-me/main.py"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.pyright]
venvPath = "."
venv = ".venv"
